mxslc/tests/data/error/bad_template_2.mxsl
float foo()
{
    return 6.9;
}

float f = foo<color3>() * 2.0;
